--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -108,8 +108,11 @@
            </li>
            {% if current_user.admin == True %}
            <li class="nav-item">
-             <a class="nav-link" href="{{ url_for('add_delete_movie') }}">Add or Delete Movies</a>
+             <a class="nav-link" href="{{ url_for('add_movie') }}">Add Movies</a>
            </li>
+           <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('delete_movie') }}">Delete Movies</a>
+          </li>
            {% endif %}
            <li class="nav-item">
              <a class="nav-link" href="{{ url_for('suggestions') }}">Suggestions</a>
