--- a/app/templates/leaderboard2.html
+++ b/app/templates/leaderboard2.html
@@ -54,11 +54,16 @@
       </li>
       {% if current_user.admin == True %}
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('add_delete_movie') }}">
+        <a class="nav-link" href="{{ url_for('add_movie') }}">
           <i class="fa fa-plus-square" aria-hidden="true"></i>
-          Add or <i class="fa fa-minus-square" aria-hidden="true"></i> Delete Movies
+          Add Movies
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('delete_movie') }}">
+          <i class="fa fa-minus-square" aria-hidden="true"></i> Delete Movies
+        </a>
+      </li>      
       {% endif %}
     </ul>
 
