--- a/app/templates/delete_movie.html
+++ b/app/templates/delete_movie.html
@@ -83,7 +83,7 @@
           <h5 class="card-header">Delete Movie</h5>
           <div class="card-body">
             <form action="{{ url_for('delete_movie') }}" method="post" role="form">
-              {{ delete_form.csrf_token }}
+              {{ form.csrf_token }}
               <select class="form-control" id="title" name="title">
                 <option>Please Select</option>
                 {% for movie in movie_list %}
