added footer to most template pages, etc

--- a/app/templates/delete_movie.html
+++ b/app/templates/delete_movie.html
@@ -75,7 +75,7 @@
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="#">Add or Delete Movies</a>
+            <a href="#">Delete Movies</a>
           </li>
         </ol>
 
@@ -116,6 +116,10 @@
   </div>
 </div>
 
+<footer class="page-footer font-small blue">
+  <div class="footer-copyright text-center py-3">MovieVote is brought to you by Tim Howat and Reuben Mansfield!
+  </div>
+</footer>
 
 {% endblock %}
 
