--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="pageinfo text-light bg-dark">
             <h1 class="text-center"> Welcome To MovieVote </h1>
-            <p class="text-center"> At MovieVote, we need your opinions on your favourite movies to once and for all see what comes out on top. <p>
+            <p class="text-center"> At MovieVote, we need your opinions on your favourite movies! <p></p>            
         </div>
     </div>
 </div>
@@ -45,4 +45,5 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
 {% endblock %}
