--- a/app/templates/leaderboard2.html
+++ b/app/templates/leaderboard2.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" />
+
+
 {% block navbar %}
 
 <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
