--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block app_content %}
-<div class="container-fluid"> <!-- this is to make it responsive to your screen width -->
+<div class="container-fluid">
     <div class="row">
-        <div class="pageinfo text-light bg-dark">  <!-- myClassName is defined in my CSS as you defined your container -->
+        <div class="pageinfo text-light bg-dark">
             <h1 class="text-center"> Welcome To MovieVote </h1>
-            <p class="text-center"> At MovieVote, we need your opinions on your favourite movies to once and for all see what comes out on top. <p>
+            <p class="text-center"> At MovieVote, we need your opinions on your favourite movies! <p>
         </div>
     </div>
 </div>
@@ -79,4 +79,5 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
 {% endblock %}
