--- a/app/templates/vote.html
+++ b/app/templates/vote.html
@@ -161,4 +161,9 @@
   </div>
 </div>
 
+<footer class="page-footer font-small blue">
+  <div class="footer-copyright text-center py-3">MovieVote is brought to you by Tim Howat and Reuben Mansfield!
+  </div>
+</footer>
+
 {% endblock %}
